some corrections made

--- a/1. survey form/main.html
+++ b/1. survey form/main.html
@@ -65,7 +65,7 @@
         </div>
       </form>
       <div class="div6">
-        <p>This is a project which i made it to have the same content and design to the site "https://survey-form.freecodecamp.rocks" by my own code. </br></br>I assert that no code is copied and all of it is designed by my own code.</p>
+        <p>I made this project have the same content and design to the site "https://survey-form.freecodecamp.rocks" </br></br>I assert that no code is copied and all of it is made by my own code.</p>
       </div>
   </body>
 </html>
