--- a/2. tribute page/main.html
+++ b/2. tribute page/main.html
@@ -41,7 +41,7 @@
       </div>
       <p>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</p>
       <div class="description">
-        <p>This is a project which i made it to have the same content and design to the site "https://tribute-page.freecodecamp.rocks" by my own code. </br>I assert that no code is copied and all of it is designed by my own code.</p>
+        <p>I made this project have the same content and design to the site "https://tribute-page.freecodecamp.rocks" </br>I assert that no code is copied and all of it is made by my own code.</p>
       </div>
     </main>
   </body>
