--- a/3. techenical documentation page/main.html
+++ b/3. techenical documentation page/main.html
@@ -210,7 +210,7 @@ statement_4_runs_if_condition_is_false; }</code>
         </div>
       </section>
       <div class="note">
-          <p>This is a project which i made it to have the same content and design to the site "<a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank">https://technical-documentation-page.freecodecamp.rocks</a>" by my own code. </br></br>I assert that no code is copied and all of it is designed by my own code.</p>
+          <p>I made this project have the same content and design to the site "<a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank">https://technical-documentation-page.freecodecamp.rocks</a>" </br></br>I assert that no code is copied and all of it is made by my own code.</p>
         </div>
     </main>
 
