--- a/4. product landing page/main.html
+++ b/4. product landing page/main.html
@@ -79,7 +79,7 @@
       </div>
       <div class="footer">
         <div class="description">
-          <p>This is a project which i made it to have the same content and design to the site "https://product-landing-page.freecodecamp.rocks/" by my own code. </br></br>I assert that no code is copied and all of it is designed by my own code.</p>
+          <p>I made this project have the same content and design to the site "https://product-landing-page.freecodecamp.rocks/" </br></br>I assert that no code is copied and all of it is made by my own code.</p>
         </div>
         <div class="contact-us">
           <ul>
