--- a/5. personal portfolio webpage/main.html
+++ b/5. personal portfolio webpage/main.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <ul id="navbar">
-      <li><a href="#about">About</a></li>
+      <li><a href="#welcome-section">About</a></li>
       <li><a href="#projects">Work</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -46,6 +46,7 @@
     </section>
     <section id="contact">
         <h1>let's work together!</h1>
+        <a href="https://github.com/" id="profile-link" target="_blank" ></a>
     </section>
   </body>
 </html>
